# taggedalgebraic

./: dub.sdl  meson.build  travis.sh
source/: taggedalgebraic.d
source/taggedalgebraic/: meson.build  taggedalgebraic.d  taggedunion.d  visit.d
